--- a/myStudentCard.html
+++ b/myStudentCard.html
@@ -9,7 +9,7 @@
 <body>
      <div class="card-div">
           <div class="">
-               <img src="./images/photo_2025-04-15_20-21-34.jpg" alt="">
+               <img src="../My-Student-Card/images/photo_2025-04-15_20-21-34.jpg" alt="">
           </div>
           <div class="card-text">
                <h1>Oseagwina Excellence Oseobulu</h1>
